--- a/src/index.css
+++ b/src/index.css
@@ -16,13 +16,30 @@ code {
     monospace;
 }
 
-@media (min-width: 560px) {
+@media (min-width: 600px) {
   body {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 @media (min-width: 768px) {
   body {
+    font-size: 14px;
+  }
+}
+@media (min-width: 992px) {
+  body {
     font-size: 16px;
+  }
+}
+
+@media (min-width: 1200px) {
+  body {
+    font-size: 18px;
+  }
+}
+
+@media (min-width: 1900px) {
+  body {
+    font-size: 20px;
   }
 }
